--- a/src/content/background/engineering-models.tex
+++ b/src/content/background/engineering-models.tex
@@ -46,7 +46,7 @@ SysML state machines extend the concept of statecharts with hierarchical state-r
 
 \subsubsection*{Activity Diagram}\label{ssec:sysml_activity}
 
-State machines cannot describe the complicated semantics of distributed systems with concurrent, parallel behaviour, where the \emph{interesting} thing is what the system \emph{does} step-by-step. SysML activity diagrams are a primary representation for modeling process based behaviour \cite{omg_sysml} for distributed, concurrent systems. \autoref{fig:sysml_activity_artifacts} shows the set of interesting modeling elements used in this work. In the following, I will introduce the different artifacts and show an example of a SysML activity diagram.
+State machines cannot describe the complicated semantics of distributed systems with concurrent, parallel behaviour, where the \emph{interesting} thing is what the system \emph{does} step-by-step. SysML activity diagrams are a primary representation for modeling process based behaviour \cite{omg_sysml} for distributed, concurrent systems. \autoref{fig:sysml_activity_artifacts} shows the set of interesting modeling elements used in this work. In the following, I introduce the different artifacts of SysML activities and show an example of a SysML activity diagram.
 
 \begin{figure}[!ht]
 	\centering
