--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -14,6 +14,8 @@ The Gamma Statechart Composition Framework\footnote{https://inf.mit.bme.hu/en/ga
 The workflow of Gamma builds on a model transformation chain depicted in \autoref{fig:gamma-overview}, which illustrates the input and output models of these model transformations as well as the languages in which they are defined, and the relations between them. The modeling languages are as follows.
 
 \begin{itemize}
+	\item The \textbf{Gamma Expression Language (GEL)} is a lightweight expression language, created to describe value expression (addition, subtraction, etc.) in actions.
+	\item The \textbf{Gamma Action Language (GAL)} is a lightweight action language, created to describe actions on statechart transitions.
 	\item The \textbf{Gamma Statechart Language (GSL)} is a UML/SysML-based statechart language supporting different semantic variants of statecharts.
 	\item The \textbf{Gamma Composition Language (GCL)} is a composition language for the formal hierarchical composition of state-based 	components according to multiple execution and interaction semantics.
 	\item The \textbf{Gamma Genmodel Language (GGL)} is a configuration language for configuring model transformations.
