--- a/src/content/background/xsts.tex
+++ b/src/content/background/xsts.tex
@@ -49,7 +49,7 @@ Note that while these are composite operations, their execution is still atomic;
 
 \subsection{Traffic Light Controller Example}
 
-\autoref{lst:gamma-xsts} is the textual representation of the traffic light controller statechart (\autoref{fig:sysml_state_machine}) transformed to XSTS\footnote{The transformation was done using Gamma.}. For a more exact presentation please see \autoref{sec:xsts_language}.
+\autoref{lst:gamma-xsts} is the textual representation of the traffic light controller statechart (\autoref{fig:sysml_state_machine}) transformed\footnote{The transformation was done using Gamma.} to XSTS. For a more exact presentation please see \autoref{sec:xsts_language}.
 
 \begin{lstlisting}[float,language=xsts, caption={Gamma XSTS Language representing the traffic light controller statechart.}, label={lst:gamma-xsts}]
 type ActivityNodeState : { __Idle__, __Running__, __Done__ }
